# stellar-classification

./: .gitignore  ABSTRACT.md  B-V_errors.csv  CITATION.cff  LICENSE.md  Plx_errors.csv  README.md  SpType_errors.csv  Star99999_cleaned.csv  Star99999_processed.csv  Vmag_errors.csv  check_columns.py  check_df.py  classification_report.txt  clean.py  cleaned_data.csv  cluster_errors.csv  clustering_analysis.py  database.py  db_integration.py  deploy_model.py  df_validation.py  e_Plx_errors.csv  explore.py  feature_analysis.py  features.py  hyperparameter_tuning.py  initial_classification.py  load.py  load_db.py  log_transformation.py  model_metrics.csv  model_performance.txt  model_performance_best.txt  model_predictions.csv  model_predictions_best.csv  normalizing.py  prediction_analysis.py  pyproject.toml  random_forest.py  (+12 more)
