[tool.poetry]
name = "stellar-classification"
version = "0.1.0"
description = "machine learning"
authors = ["James Potter <jameskpotter80@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
SQLAlchemy = "^2.0.30"
pg8000 = "^1.31.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
